# vadns

./: .gitignore  CMakeLists.txt  README.md
include/vadns/: config.h.cmakein  vadns.h  version.h.cmakein
src/: main.cpp  version.h.cmakein
src/compat/: types.h
src/core/: macros.h
src/dns/: iana.h
src/net/: server.cpp  server.h
